# gguf-switchboard

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  config.docker.toml  config.toml  deploy.sh  docker-compose.yml  gguf-switchboard.service  models.docker.toml  models.toml  openai-runtime.service  precommit.sh
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml  update-lockfile.yml
docs/: ARCHITECTURE.md  BENCHMARKS.md  COMPARISON.md  COMPATIBILITY.md  CONFIGURATION.md  USAGE.md
docs/adr/: 001-positioning-vs-llama-swap.md
docs/plans/: 2026-07-10-001-refactor-credibility-reliability-plan.md
releases/: v0.1.1.md  v0.1.2.md
scripts/: bench-vs-llama-swap.sh  install-hooks.sh  test-deploy-models.sh
src/: context.rs  gpu.rs  kind_guard.rs  lib.rs  load_failure.rs  main.rs  ngl.rs  openapi_models.rs  sanitize.rs
src/api/: anthropic.rs  audio.rs  chat.rs  completions.rs  embeddings.rs  health.rs  metrics.rs  mod.rs  models.rs  responses.rs  usage.rs
src/backend/: llama_cpp.rs  mod.rs
src/config/: hf_sync.rs  mod.rs  models_registry.rs
src/db/: mod.rs
src/errors/: mod.rs
src/memory/: mod.rs
src/metrics/: mod.rs
src/proxy/: mod.rs
src/scheduler/: mod.rs
src/state/: mod.rs
src/types/: anthropic.rs  audio.rs  chat.rs  completions.rs  embeddings.rs  mod.rs  models.rs  responses.rs
swagger-ui-overrides/: index.css  swagger-initializer.js
tests/: integration.rs  scheduler_switch.rs
tests/support/: mod.rs
