[package]
name = "openai-runtime"
version = "0.1.0"
edition = "2024"
description = "A 100% OpenAI API compatible local inference runtime"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pradeepgudipati/gguf-switchboard"
keywords = ["openai", "llm", "inference", "runtime", "gguf"]
categories = ["command-line-utilities", "web-programming::http-server"]

[[bin]]
name = "openai-runtime"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "util"] }
tokio-util = "0.7"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
bytes = "1"
http = "1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
prometheus = "0.13"
once_cell = "1"
rand = "0.8"
nix = { version = "0.29", features = ["signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
mime = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tokio-test = "0.4"
axum-test = "16"
serial_test = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
