[package]
name = "gguf-switchboard"
version = "0.1.2"
edition = "2024"
description = "llama-swap alternative in Rust — OpenAI-compatible GGUF runtime with VRAM-pressure eviction, context auto-fallback, and usage tracking"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pradeepgudipati/gguf-switchboard"
keywords = ["gguf", "llama-cpp", "openai-api", "local-llm", "model-swap", "llm-inference"]
categories = ["command-line-utilities", "web-programming::http-server"]

[[bin]]
name = "gguf-switchboard"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "charset", "http2"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "util"] }
tokio-util = "0.7"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
bytes = "1"
http = "1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
prometheus = "0.14"
once_cell = "1"
rand = "0.8"
nix = { version = "0.29", features = ["signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
mime = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
tokio-test = "0.4"
axum-test = "16"
serial_test = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lints.clippy]
all = "warn"
